# testgen

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  solutionmulti.py
src/: lib.rs  main.rs
src/cli/: mod.rs
src/io/: executor.rs  mod.rs
src/problemspec/: converter.rs  generator.rs  mod.rs  spec.rs
src/runner/: executor.rs  io.rs  mod.rs  sample.rs  testcase.rs
src/testspec/: mod.rs  random.rs  spec.rs
