[package]
name = "testgen"
version = "0.2.1"
authors = ["Pahlevi Fikri Auliya <pahlevi.fikri.auliya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
clap = "3.0.0-beta.4"
shlex = "1.1.0" 
rand = "0.8.4"
